k8s/mautic-prod.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mautic 
  labels:
    app: facet-mautic
spec:
  serviceName: mautic
  replicas: 1
  selector:
    matchLabels:
      app: facet-mautic 
  template:
    metadata:
      labels:
        app: facet-mautic 
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1000
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: cache
        - name: logs
          persistentVolumeClaim:
            claimName: logs
      containers:
        - image: 993385208142.dkr.ecr.us-west-1.amazonaws.com/facet-mautic-nginx:#TAG#
          name: nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: mautic        
        - image: 993385208142.dkr.ecr.us-west-1.amazonaws.com/facet-mautic:#TAG#
          name: mautic
          imagePullPolicy: Always
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: logs
              mountPath: /logs
---
apiVersion: v1
kind: Service
metadata:
  name: mautic
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
  selector:
    app: facet-mautic
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mautic
  annotations:
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  tls:
  - hosts: 
    - mautic.k8s.facetinteractive.com
    secretName: mautic-tls
  rules:
  - host: mautic.k8s.facetinteractive.com
    http:
      paths:
      - backend:
          serviceName: mautic
          servicePort: 80
