k8s/mautic.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mautic 
  labels:
    app: facet-mautic
spec:
  serviceName: mautic
  replicas: 4
  selector:
    matchLabels:
      app: facet-mautic 
  template:
    metadata:
      labels:
        app: facet-mautic 
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1000
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: cache
        - name: logs
          persistentVolumeClaim:
            claimName: logs
      containers:
        - image: 993385208142.dkr.ecr.us-west-1.amazonaws.com/facet-mautic-nginx:1.6
          name: nginx
          ports:
            - containerPort: 8080
              name: mautic        
        - image: 993385208142.dkr.ecr.us-west-1.amazonaws.com/facet-mautic:2.15.3.1
          name: mautic
          volumeMounts:
            - name: cache
              mountPath: /cache
            - name: logs
              mountPath: /logs
---
apiVersion: v1
kind: Service
metadata:
  name: mautic
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  type: ClusterIP
  selector:
    app: facet-mautic
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: facet-mautic-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facet-mautic-db
  template:
    metadata:
      labels:
        app: facet-mautic-db
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
      containers:
      - image: mysql:5
        args:
          - "--ignore-db-dir=lost+found"
        name: mysql
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mautic
  annotations:
    kubernetes.io/ingress.class: nginx  
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - host: mautic.k8s.facetinteractive.com
    http:
      paths:
      - backend:
          serviceName: mautic
          servicePort: 80
# rabbitmq
# cache??
